# tsfile

./: .gitignore  CLAUDE.md  LICENSE  README-zh.md  README.md  RELEASE_NOTES.md  doap_tsfile.rdf  pom.xml
cpp/src/: CMakeLists.txt
cpp/src/common/: CMakeLists.txt  db_common.h  device_id.cc  device_id.h  global.cc  global.h  path.cc  path.h  record.h  row_record.h  schema.h  seq_tvlist.h  statistic.h  tablet.cc  tablet.h  tablet_iterator.h  thread_pool.h  tsfile_common.cc  tsfile_common.h  tsfile_mgr.cc  tsfile_mgr.h
cpp/src/common/allocator/: alloc_base.h  byte_stream.h  mem_alloc.cc  my_string.h  page_arena.cc  page_arena.h
cpp/src/common/config/: config.h
cpp/src/common/constant/: tsfile_constant.h
cpp/src/common/container/: array.h  bit_map.h  blocking_queue.cc  byte_buffer.h  hash_func.h  hash_node.h  hash_table.h  list.h  murmur_hash3.h  slice.h  sorted_array.h
cpp/src/common/datatype/: date_converter.h  value.h
cpp/src/common/mutex/: mutex.h
cpp/src/common/tsblock/: tsblock.cc  tsblock.h  tuple_desc.cc  tuple_desc.h
cpp/src/common/tsblock/vector/: fixed_length_vector.h  (+2 more)
cpp/src/compress/: CMakeLists.txt  compressor.h  compressor_factory.h  gzip_compressor.cc  gzip_compressor.h  lz4_compressor.cc  lz4_compressor.h  lzo_compressor.cc  lzo_compressor.h  snappy_compressor.cc  snappy_compressor.h  uncompressed_compressor.h
cpp/src/cwrapper/: CMakeLists.txt  arrow_c.cc  errno_define_c.h  tsfile_cwrapper.cc  tsfile_cwrapper.h
cpp/src/encoding/: bitpack_decoder.h  decoder.h  decoder_factory.h  dictionary_decoder.h  dictionary_encoder.h  encode_utils.h  encoder.h  encoder_factory.h  fire.h  float_sprintz_decoder.h  gorilla_decoder.h  gorilla_encoder.h  int32_rle_decoder.h  int32_rle_encoder.h  int32_sprintz_decoder.h  int64_rle_decoder.h  int64_rle_encoder.h  int64_sprintz_decoder.h  intpacker.h  plain_decoder.h  plain_encoder.h  sprintz_encoder.h  ts2diff_decoder.h  ts2diff_encoder.h  zigzag_decoder.h  zigzag_encoder.h
cpp/src/file/: open_file.cc  open_file.h  read_file.cc  read_file.h  restorable_tsfile_io_writer.cc  restorable_tsfile_io_writer.h  tsfile_io_reader.cc  tsfile_io_reader.h  tsfile_io_writer.cc  tsfile_io_writer.h  write_file.cc  write_file.h
cpp/src/reader/: aligned_chunk_reader.cc  aligned_chunk_reader.h  bloom_filter.cc  bloom_filter.h  chunk_reader.cc  chunk_reader.h  column_mapping.h  device_meta_iterator.cc  device_meta_iterator.h  expression.cc  expression.h  ichunk_reader.h  meta_data_querier.cc  meta_data_querier.h  qds_with_timegenerator.cc  qds_with_timegenerator.h  qds_without_timegenerator.cc  qds_without_timegenerator.h  result_set.h  scan_iterator.cc  scan_iterator.h  table_query_executor.cc  table_query_executor.h  table_result_set.cc  table_result_set.h  tsfile_executor.cc  tsfile_executor.h  tsfile_reader.cc  tsfile_reader.h  tsfile_series_scan_iterator.cc  tsfile_series_scan_iterator.h  tsfile_tree_reader.cc  tsfile_tree_reader.h
cpp/src/reader/block/: device_ordered_tsblock_reader.cc  device_ordered_tsblock_reader.h  single_device_tsblock_reader.cc  single_device_tsblock_reader.h  tsblock_reader.h
cpp/src/reader/filter/: and_filter.h  between.h  binary_filter.h  eq.h  gt.h  gt_eq.h  in.h  lt.h  lt_eq.h  not_eq.h  object.h  or_filter.h  tag_filter.cc  tag_filter.h  time_operator.cc  time_operator.h  unary_filter.h
cpp/src/reader/task/: device_query_task.cc  device_query_task.h  device_task_iterator.cc  device_task_iterator.h
cpp/src/utils/: date_utils.h  db_utils.h  errno_define.h  storage_utils.h  util_define.h
cpp/src/writer/: chunk_writer.cc  chunk_writer.h  page_writer.cc  page_writer.h  time_chunk_writer.cc  time_chunk_writer.h  time_page_writer.cc  time_page_writer.h  tsfile_table_writer.cc  tsfile_table_writer.h  tsfile_tree_writer.cc  tsfile_tree_writer.h  tsfile_writer.cc  tsfile_writer.h  value_chunk_writer.cc  value_chunk_writer.h  value_page_writer.cc  value_page_writer.h
cpp/test/: CMakeLists.txt
cpp/test/common/: device_id_test.cc  row_record_test.cc  tsfile_common_test.cc
cpp/test/common/allocator/: alloc_base_test.cc
cpp/test/common/datatype/: date_converter_test.cc
cpp/test/common/tsblock/: arrow_tsblock_test.cc  tslock_test.cc
cpp/test/compress/: gzip_compressor_test.cc  lz4_compressor_test.cc  lzo_compressor_test.cc  snappy_compressor_test.cc
cpp/test/cwrapper/: c_release_test.cc  cwrapper_metadata_test.cc  cwrapper_test.cc  query_by_row_cwrapper_test.cc
cpp/test/encoding/: int32_rle_codec_test.cc  ts2diff_codec_test.cc
cpp/test/file/: restorable_tsfile_io_writer_test.cc  write_file_test.cc
cpp/test/reader/: bloom_filter_test.cc  query_by_row_performance_test.cc  tsfile_reader_test.cc
cpp/test/reader/table_view/: tsfile_reader_table_batch_test.cc  tsfile_reader_table_test.cc  tsfile_table_query_by_row_test.cc
cpp/test/reader/tree_view/: tsfile_reader_tree_test.cc  tsfile_tree_query_by_row_test.cc
cpp/test/utils/: db_utils_test.cc
cpp/test/writer/: tsfile_writer_test.cc
cpp/test/writer/table_view/: tsfile_writer_table_test.cc
python/: CLAUDE.md  README-zh.md  README.md  VersionUpdater.groovy  lower_case_name.tsfile  pom.xml  pyproject.toml  requirements.txt  setup.py  test1.tsfile
python/examples/: example.py
python/tests/: bench_batch_arrow_vs_dataframe.py  bench_write_arrow_vs_dataframe.py  test_basic.py  test_batch_arrow.py  test_dataframe.py  test_load_tsfile_from_iotdb.py  test_query_by_row.py  test_reader_metadata.py  test_tag_filter.py  test_tag_filter_query.py  test_to_tsfile.py  test_tsfile_dataset.py  test_write.py  test_write_and_read.py  test_write_arrow.py
python/tests/resources/: README.md  simple_table_t1.tsfile  simple_table_t2.tsfile  simple_tree.tsfile  table_with_time_column.tsfile
python/tsfile/: __init__.py  constants.py  exceptions.py  field.py  row_record.py  schema.py  tablet.py  tag_filter.py  tsfile_cpp.pxd  tsfile_py_cpp.pxd  tsfile_py_cpp.pyx  tsfile_reader.pyx  tsfile_table_writer.py  tsfile_writer.pyx  utils.py
python/tsfile/dataset/: __init__.py  dataframe.py  formatting.py  merge.py  metadata.py  reader.py  timeseries.py
(+152 files in other folders)
